--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "git@github.com:steve-heslouin/snyk-test.git"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-env": "^1.4.0",
     "bower": "^1.8.0",
     "express": "^4.13.3",
