--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "babel-preset-env": "^1.4.0",
     "bower": "^1.8.0",
+    "jquery": "~2.1.4",
+    "moment": "~2.10.6",
     "express": "^4.13.3",
     "express-http-proxy": "^0.6.0",
     "glob": "^5.0.15",
