--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "jquery": "~2.1.4",
     "moment": "~2.10.6",
     "express": "^4.13.3",
+    "moment-timezone": "~0.4.1-2015g",
+    "selectize": "https://github.com/codewise/selectize.js.git#master",
+    "svg4everybody": "~2.0.0",
+    "highcharts": "http://code.highcharts.com/4.0.4/highcharts.js",
+    "lodash": "~4.13.1",
+    "deep-diff": "^0.3.3",
+    "localforage": "^1.5.0",
+    "file-saver": "^1.3.3"
     "express-http-proxy": "^0.6.0",
     "glob": "^5.0.15",
     "grunt": "^0.4.5",
