--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "~4.13.1",
     "deep-diff": "^0.3.3",
     "localforage": "^1.5.0",
-    "file-saver": "^1.3.3"
+    "file-saver": "^1.3.3",
     "express-http-proxy": "^0.6.0",
     "glob": "^5.0.15",
     "grunt": "^0.4.5",
