--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "url": "git@github.com:steve-heslouin/snyk-test.git"
   },
   "dependencies": {
-    "babel-preset-env": "^1.4.0",
-    "bower": "^1.8.0",
-    "jquery": "~2.1.4",
+     "jquery": "~2.1.4",
     "moment": "~2.10.6",
-    "express": "^4.13.3",
     "moment-timezone": "~0.4.1-2015g",
     "selectize": "https://github.com/codewise/selectize.js.git#master",
     "svg4everybody": "~2.0.0",
@@ -18,43 +15,7 @@
     "lodash": "~4.13.1",
     "deep-diff": "^0.3.3",
     "localforage": "^1.5.0",
-    "file-saver": "^1.3.3",
-    "express-http-proxy": "^0.6.0",
-    "glob": "^5.0.15",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^6.0.0",
-    "grunt-bower-concat": "^0.6.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compress": "^0.14.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-symlink": "^0.3.0",
-    "grunt-contrib-uglify": "~2.3.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "~17.3.0",
-    "grunt-express": "^1.4.1",
-    "grunt-githooks": "~0.3.1",
-    "grunt-image-embed": "^0.3.3",
-    "grunt-injector": "^0.6.1",
-    "grunt-karma": "^2.0.0",
-    "grunt-nunjucks-compile": "file:./grunt/custom-tasks/grunt-nunjucks-compile/",
-    "grunt-svg-sprite": "^1.2.19",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-wiredep": "^2.0.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "less-plugin-autoprefix": "^1.5.1",
-    "load-grunt-tasks": "^3.3.0",
-    "lodash": "^3.10.1",
-    "normalize.css": "3.0.3",
-    "phantomjs-prebuilt": "^2.1.7",
-    "request": "^2.69.0",
-    "uglify-save-license": "^0.4.1"
+    "file-saver": "^1.3.3"
   },
   "scripts": {
     "postinstall": "bower install && grunt githooks",
